Make most specs (16) pass

--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,11 @@
-<div id='container'>
+<div ng-controller="ShortenController" id='shorten'>
 <!-- Your code here -->
+  <h1>Add a link</h1>
+  <input ng-model='newLink'>
 
+  <button ng-click='addLink(newLink)'>Add</button>
+
+  <div>{{newLink}}</div>
 </div>
 
 
