--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,6 @@
-<div id='container'>
-  <!-- Your html here-ng-repeat/forEach a template for each link> 
+<div id='links'>
+
+  <ul ng-controller="LinksController">
+    <li ng-repeat="link in data">{{ link }}</li>
+  </ul>
 </div>
