Make 18th spec pass

--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,9 +1,9 @@
 <div ng-controller="ShortenController" id='shorten'>
 <!-- Your code here -->
   <h1>Add a link</h1>
-  <input ng-model='newLink'>
+  <input ng-model='link'>
 
-  <button ng-click='addLink(newLink)'>Add</button>
+  <button ng-click='addLink(link)'>Add</button>
 
   <div>{{newLink}}</div>
 </div>
