Make all tests pass

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -3,5 +3,5 @@
   <ul ng-controller="LinksController">
     <li ng-repeat="link in data">{{ link }}</li>
   </ul>
-  <p>{{$scope.data.links}}</p>
+  <p>{{data}}</p>
 </div>
