Display links data, fix Shorten's POST

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,7 +1,28 @@
 <div id='links'>
 
   <ul ng-controller="LinksController">
-    <li ng-repeat="link in data">{{ link }}</li>
+    <li ng-repeat="link in data">
+      <a href="/{{ link.code }}">
+        {{ link.title }}
+      </a>
+      <span> Shortened Url: localhost:3000/{{link.code}} </span>
+      <span>
+        Visits: {{ link.visits }}
+      </span>
+    </li>
   </ul>
   <p>{{data}}</p>
 </div>
+
+
+
+
+<!-- <script id='link' type='text/x-handlebars-template'>
+  <img src='/redirect_icon.png'/>
+  <div class='info'>
+    <div class='visits'><span class='count'>{{visits}}</span>Visits</div>
+    <div class='title'>{{title}}</div>
+    <div class='original'>{{url}}</div>
+    <a href='{{baseUrl}}/{{code}}'>{{baseUrl}}/{{code}}</a>
+  </div>
+</script> -->
