--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,13 @@
   <body>
     <h1>Shortly</h1>
 
+    <nav class='navigation'>
+      <ul>
+        <li><a href="/#links">Links</a></li>
+        <li><a href="/#shorten">Shorten</a></li>
+      </ul>
+    </nav>
+
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
