Final commit, out of energy for the day & week

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,7 +1,7 @@
 <div id='links'>
 
   <ul ng-controller="LinksController">
-    <li ng-repeat="link in data">
+    <li ng-repeat="link in data.reverse() | orderBy: 'visits' ">
       <a href="/{{ link.code }}">
         {{ link.title }}
       </a>
